# python_minimal_starter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/: fib.py  fib_test.py  main.py
